Fix spacing issues with slick slider.

--- a/docroot/css/sass/_variables.scss
+++ b/docroot/css/sass/_variables.scss
@@ -17,23 +17,10 @@ $fs-large: 16px;
 $fs-extra-large: 24px;
 $fs-title: 18px;
 
-$desktop-width: 1024px;
+$desktop-width: 990px;
 
 @mixin desktop {
   @media (min-width: #{$desktop-width}) {
     @content;
-  }
-}
-
-@mixin dark-overlay{
-  &:after{
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    right: 0;
-    left: 0;
-    bottom: 0;
   }
 }
