--- a/docroot/css/sass/styles.scss
+++ b/docroot/css/sass/styles.scss
@@ -77,27 +77,29 @@ a.logo:visited {
 }
 
 .hero-image-container {
-  position: relative;
   max-height: 900px;
+  height: 100%;
   overflow: hidden;
 }
 
 .hero-caption {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1000;
-  @include dark-overlay;
+  background: rgb(0, 0, 0);
+
+  @include desktop {
+    position: absolute;
+    transform: translate(0%, -100%);
+    z-index: 1000;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.45);
+  }
 }
 
-.hero-caption:after {
-  background:rgba(0, 0, 0, 0.45);
+.slick-track {
+  margin-bottom: -3px;
 }
 
 .hero-caption p {
   padding-left: 50px;
-  margin-bottom: 10px;
   line-height: 1.5;
   font-size: $fs-extra-large;
   font-family: $f-serif;
